# android-audiokit

./: .gitignore  .gitmodules  build.gradle.kts  settings.gradle.kts
.github/workflows/: publish.yml
.tree/: TREE.MD
android-lib/: build.gradle.kts
android-lib/src/main/cpp/: CMakeLists.txt  android_audio_source.cpp
android-lib/src/main/java/cz/eidam/lib/: Engines.kt
core-lib/: build.gradle.kts
core-lib/src/main/cpp/: CMakeLists.txt  core_audio_engine.cpp  jni_glue.cpp
core-lib/src/main/cpp/include/: audio_engine.h  audio_source.h  result_listener.h
core-lib/src/main/kotlin/cz/eidam/lib/: AubioEngine.kt  AudioDevice.kt  CoreApi.kt  NativeLib.kt  Platform.kt
desktop-lib/: build.gradle.kts
desktop-lib/src/main/cpp/: CMakeLists.txt  desktop_audio_source.cpp
desktop-test-app/: README.md  build.gradle.kts
desktop-test-app/src/main/kotlin/cz/eidam/test_app/: App.kt  Main.kt
gradle/: libs.versions.toml
lib/: build.gradle.kts
lib/src/main/cpp/: CMakeLists.txt  audio_engine.cpp  audio_engine.h  audio_source.h  audio_source_manager.cpp  native-lib.cpp
lib/src/main/java/cz/eidam/lib/: AudioEngine.kt  AudioRecorder.kt  NativeLib.kt
test-app/: build.gradle.kts
test-app/src/main/: AndroidManifest.xml
test-app/src/main/java/cz/eidam/test_app/: Devices.kt  DualAlgorithm.kt  MainActivity.kt  MainScreen.kt  SingleAlgorithm.kt
test-app/src/main/java/cz/eidam/test_app/ui/theme/: Color.kt  Theme.kt  Type.kt
test-app/src/main/res/values/: themes.xml
